<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Android Sensor Data</string>
    <string name="X_axis">X Axis</string>
    <string name="Y_axis">Y Axis</string>
    <string name="Z_axis">Z Axis</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="linearacceleration">Linear Acceleration</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="rotation">Rotation</string>
    <string name="value">Value</string>
    <string name="inputrequest">Please fill in your personal information</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="age">Age (yrs)</string>
    <string name="sex">Gender</string>
    <string name="illustration">Please switch ON data collection, put the smart phone in hand, and then walk normally on level ground for at least 30 sec</string>
    <string name="start">Start</string>
    <string name="end">Stop</string>
    <string name="send">Send result!</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="orientation">Orientation</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
  

</resources>
